tests/struct/fields_after_methods.rev
struct Foo {
    a
    b

    fn add() {}

    c // error: fields must be declared before methods
}